@@ -1,8 +1,8 @@
 name: BuildTools
 on:
   push:
-  # schedule:
-  #   - cron: '0 */4 * * *'  
+  schedule:
+    - cron: '0 */4 * * *'  
 jobs:
   build:
     name: build hackbin docker image
