@@ -26,7 +26,7 @@ get_localgobin(){
 
 get_etcd(){
 
-    ETCD_VER=v3.5.0
+    ETCD_VER=v3.5.1
 
     # choose either URL
     GOOGLE_URL=https://storage.googleapis.com/etcd
@@ -46,7 +46,7 @@ get_etcd(){
 }
 
 get_helm(){
-    local helm_ver=v3.7.0
+    local helm_ver=v3.7.1
     rm -f /tmp/helm-${helm_ver}-linux-amd64.tar.gz
     rm -rf /tmp/helm && mkdir -p /tmp/helm 
     curl -s -L https://get.helm.sh/helm-${helm_ver}-linux-amd64.tar.gz -o /tmp/helm-${helm_ver}-linux-amd64.tar.gz
@@ -57,25 +57,25 @@ get_helm(){
     ${releasedir}/helm -h | grep version || exit 1
 }
 
-get_helmv2(){
-    local helm_ver=v2.17.0
-    rm -f /tmp/helm-${helm_ver}-linux-amd64.tar.gz
-    rm -rf /tmp/helm && mkdir -p /tmp/helm 
-    curl -s -L https://get.helm.sh/helm-${helm_ver}-linux-amd64.tar.gz -o /tmp/helm-${helm_ver}-linux-amd64.tar.gz
-    tar xzf /tmp/helm-${helm_ver}-linux-amd64.tar.gz -C /tmp/helm  --strip-components=1
-    echo "copy helmv2"
-    mv /tmp/helm/helm /tmp/helm/helmv2 
-    cp -a /tmp/helm/helmv2 ${releasedir}
-    chmod +x ${releasedir}/helmv2
-    ${releasedir}/helmv2 -h | grep version || exit 1
-}
+# get_helmv2(){
+#     local helm_ver=v2.17.0
+#     rm -f /tmp/helm-${helm_ver}-linux-amd64.tar.gz
+#     rm -rf /tmp/helm && mkdir -p /tmp/helm 
+#     curl -s -L https://get.helm.sh/helm-${helm_ver}-linux-amd64.tar.gz -o /tmp/helm-${helm_ver}-linux-amd64.tar.gz
+#     tar xzf /tmp/helm-${helm_ver}-linux-amd64.tar.gz -C /tmp/helm  --strip-components=1
+#     echo "copy helmv2"
+#     mv /tmp/helm/helm /tmp/helm/helmv2 
+#     cp -a /tmp/helm/helmv2 ${releasedir}
+#     chmod +x ${releasedir}/helmv2
+#     ${releasedir}/helmv2 -h | grep version || exit 1
+# }
 
 get_dockercompose(){
-    local dc_ver=1.29.2
-    curl -L https://github.com/docker/compose/releases/download/${dc_ver}/docker-compose-Linux-x86_64 -o ${releasedir}/docker-compose
+    local dc_ver=v2.0.1
+    curl -L https://github.com/docker/compose/releases/download/${dc_ver}/docker-compose-linux-x86_64 -o ${releasedir}/docker-compose
     echo "download docker-compose ${dc_ver}"
     chmod +x ${releasedir}/docker-compose
-    ${releasedir}/docker-compose -h | grep version || exit 1
+    ${releasedir}/docker-compose version | grep $dc_ver || exit 1
 }
 
 get_calicoctl(){
@@ -95,7 +95,7 @@ get_ctop(){
 }
 
 get_istio(){
-    local istio_ver=1.11.3
+    local istio_ver=1.11.4
     rm -f /tmp/istio-${istio_ver}-linux.tar.gz
     rm -rf /tmp/istio && mkdir -p /tmp/istio 
     curl -s -L https://github.com/istio/istio/releases/download/${istio_ver}/istio-${istio_ver}-linux-amd64.tar.gz -o /tmp/istio-${istio_ver}-linux.tar.gz
@@ -200,7 +200,7 @@ download(){
     get_localbin
     get_etcd
     get_helm
-    get_helmv2
+    # get_helmv2
     get_dockercompose
     get_calicoctl
     get_ctop
